fix home button overflow

--- a/src/components/side-pane/styles.module.scss
+++ b/src/components/side-pane/styles.module.scss
@@ -55,6 +55,7 @@ body .customStatusInput {
     }
   }
   .homeLogo {
+    overflow: hidden;
     width: 42px;
     height: 42px;
     border-radius: 50%;
