--- a/src/components/ui/MobileBottomPane.module.scss
+++ b/src/components/ui/MobileBottomPane.module.scss
@@ -33,6 +33,7 @@
     }
   }
   .homeLogo {
+    overflow: hidden;
     width: 24px;
     height: 24px;
     border-radius: 50%;
